# GAON

./: .gitignore  DESIGN_SYSTEM.md  README.md  UX_IMPROVEMENTS.md  deploy.sh  docker-compose-db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  rollback_script.sh  temp_feature_55.txt  test.db  test_conversation.txt  test_rag_feedback.py  test_rag_full.py  test_rag_simple.py  test_rag_with_env.py  test_updated_rag.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  audio_test.py  audio_test2.py  audio_test3.py  check_pipeline_status.py  conversation_analysis.json  fix_fk_constraint.sql  init.sql  insert_test_data.py  insert_test_data.sql  migration_agent.sql  migration_trigger.txt  process_all_gcs_files.py  pyproject.toml  requirement.txt  run_migration.py  segments.json  test_audio_api.py  test_conversation.txt  test_detailed_websocket.py  test_document_pipeline.py  test_document_pipeline_simple.py  test_free_chat.py  test_legacy.txt  test_speaker_mapping.py  test_stt_longrunning.py  test_toc_rag_refactored.py  test_websocket.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_29_18a5f7a2bf81_initial_migration.py  2025_10_29_4cb33c98f6f4_updated_migration_with_models.py  2025_11_06_604bd5197f7e_add_conversation_file_table.py  2025_11_06_be99d0c2f06d_add_conversation_and_conversation_file_.py  2025_11_08_23a1cbb6a510_실시간_대화_테이블_추가.py  2025_11_08_d9ea8b908ff6_add_display_name_to_realtime_session.py  2025_11_10_086f6d0bc99a_create_analysis_result_table.py  2025_11_11_add_audio_fields_to_conversation_file.py  2025_11_11_cleanup_conversation_schema.py  2025_11_11_new_ideal_answer_schema.py  2025_11_18_7a1414872d79_add_rag_type_to_ideal_answer.py  2025_11_18_e514ebe1c2f6_merge_heads.py  2025_11_19_2687d42f5bc6_add_status_to_family_members.py  2025_11_19_84a14c869175_add_family_and_family_members_tables.py  2025_11_20_740afd11abfe_add_age_and_gender_columns_to_users_.py  2025_11_20_94ec1cfbea66_merge_user_and_family_heads.py
backend/app/: main.py  runserver.py
backend/app/agent/: __init__.py  crud.py  main_agent.py  main_run.py  main_run_v2.py
backend/app/core/: config.py  config_testing.py  database.py  database_testing.py  new_security.py  security.py  time.py
backend/app/interface/: agent.py
backend/app/llm/: chains.py  prompts.py  rag_legacy_adapter.py  rag_toc_based.py  schemas.py  toc_chunker.py  tools.py
backend/app/tests/: conftest.py  new_test_user.py  test_agent_pipeline.py  test_analysis_api.py  test_api_structure.py  test_audio_api.py  test_audio_api_simple.py  test_audio_conversation_complete.py  test_audio_conversation_model.py  test_audio_system.py  test_auth.py  test_auth_system.py  test_code_cleanup.py  test_conversation.py  (+21 more)
backend/test/: test_legacy_rag_refactored.py
(+292 files in other folders)
